<resources>
    <string name="app_name">Just Java</string>


    <!-- Basic Texts in App -->
    <string name="hint_text">Enter Name</string>
    <string name="toppings_text">Toppings</string>
    <string name="whippedCream_text">Whipped Cream</string>
    <string name="chocolate_text">Chocolate</string>
    <string name="quantity_text">Quantity</string>
    <string name="subtract_text"> - </string>
    <string name="zero_text"> 0 </string>
    <string name="addition_text"> + </string>
    <string name="order_text"> Order </string>

</resources>
